<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 The Android Open Source Project
  ~
  ~    Author: Gehad Ahmed
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/both_activities_background">

    <EditText
        android:id="@+id/bookNameEdit"
        style="@style/EditTextStyle"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="8dp"
        android:hint="@string/hint_bookName"
        android:inputType="textCapWords"
        app:layout_constraintBottom_toBottomOf="@+id/bookNameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bookNameTitle"
        app:layout_constraintTop_toTopOf="@+id/bookNameTitle" />

    <TextView
        android:id="@+id/bookNameTitle"
        style="@style/EditActivityTitles"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/Title_bookName"
        app:layout_constraintEnd_toStartOf="@+id/bookNameEdit"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/bookPriceEdit"
        style="@style/EditTextStyle"
        android:layout_width="208dp"
        android:layout_height="36dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="8dp"
        android:hint="@string/hint_bookPrice"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/bookPriceTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bookPriceTitle"
        app:layout_constraintTop_toTopOf="@+id/bookPriceTitle" />

    <TextView
        android:id="@+id/bookPriceTitle"
        style="@style/EditActivityTitles"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/Title_bookPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookNameTitle" />

    <Button
        android:id="@+id/decreaseQtyButton"
        android:layout_width="37dp"
        android:layout_height="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corners_qty_dec"
        android:gravity="center"
        android:text="@string/decreaseQtyText"
        android:textColor="@color/default_black"
        android:textSize="@dimen/EdiTextSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/increaseQtyButton"
        app:layout_constraintStart_toEndOf="@+id/bookQuantityTitle"
        app:layout_constraintTop_toTopOf="@+id/increaseQtyButton"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/bookQuantityEdit"
        style="@style/EditTextStyle"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/hint_bookQuantity"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/bookQuantityTitle"
        app:layout_constraintEnd_toStartOf="@+id/increaseQtyButton"
        app:layout_constraintStart_toEndOf="@+id/decreaseQtyButton"
        app:layout_constraintTop_toTopOf="@+id/bookQuantityTitle"
        app:layout_constraintVertical_bias="0.611" />

    <Button
        android:id="@+id/increaseQtyButton"
        android:layout_width="37dp"
        android:layout_height="36dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corners_qty_inc"
        android:gravity="center"
        android:text="@string/increaseQtyText"
        android:textColor="@color/default_black"
        android:textSize="@dimen/EdiTextSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookPriceEdit" />

    <TextView
        android:id="@+id/bookQuantityTitle"
        style="@style/EditActivityTitles"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/Title_bookQuantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookPriceTitle" />

    <EditText
        android:id="@+id/bookSuppEdit"
        style="@style/EditTextStyle"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="8dp"
        android:hint="@string/hint_bookSupp"
        android:inputType="textCapWords"
        app:layout_constraintBottom_toBottomOf="@+id/bookSuppTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/bookSuppTitle"
        app:layout_constraintTop_toTopOf="@+id/bookSuppTitle" />

    <TextView
        android:id="@+id/bookSuppTitle"
        style="@style/EditActivityTitles"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/Title_bookSupp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookQuantityTitle" />

    <EditText
        android:id="@+id/bookSuppPhoneEdit"
        style="@style/EditTextStyle"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="8dp"
        android:hint="@string/hint_bookSuppPhone"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@+id/bookSuppPhoneTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/bookSuppPhoneTitle"
        app:layout_constraintTop_toTopOf="@+id/bookSuppPhoneTitle" />

    <TextView
        android:id="@+id/bookSuppPhoneTitle"
        style="@style/EditActivityTitles"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/Title_bookSuppPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookSuppTitle" />

    <TextView
        android:id="@+id/main_hint"
        style="@style/main_hint"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/hint_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookSuppPhoneEdit" />

    <Button
        android:id="@+id/bookOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/rounded_corners_order"
        android:gravity="center"
        android:text="@string/orderButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_hint" />

</android.support.constraint.ConstraintLayout>